learning box sizing

--- a/cwh/index.html
+++ b/cwh/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <form action="">
-    
-   </form>
+   <div class="box">this is my box</div>
 </body>
 </html>
