--- a/css_start/index.html
+++ b/css_start/index.html
@@ -7,9 +7,31 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>3>4 &lt;p&gt;&abreve;/p&gtcir;</h1>
-    <pre>
-        <code>print("hello wolrd")</code>
-    </pre>
+
+    <div class="container">
+        <div>
+            this is div one
+        </div>
+        <div>
+            this is div one
+        </div>
+        <div>
+            this is div one
+        </div>
+        <div>
+            this is div one
+        </div>
+        <div>
+            this is div one
+        </div>
+        <div>
+            this is div one
+        </div>
+        <div>
+            this is div one
+        </div>
+    </div>
+    <h1>fonts</h1>
+    <p>this is for learning fonts </p>
 </body>
 </html>
