--- a/css_start/index.html
+++ b/css_start/index.html
@@ -33,5 +33,9 @@
     </div>
     <h1>fonts</h1>
     <p>this is for learning fonts </p>
+    <button>submit</button>
+    <script>
+        alert('hello world');
+    </script>
 </body>
 </html>
