--- a/cwh/index.html
+++ b/cwh/index.html
@@ -7,13 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <header>
-    <ul>
-      <li>home</li>
-      <li>product</li>
-      <li>profile</li>
-      <li>contact</li>
-    </ul>
-  </header>
+<div class="box box1" ></div>
+<div class="box box2"></div>
+<div class="box box3"></div>
+<div class="box box4"></div>
 </body>
 </html>
